--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In Form</title> <!-- Title of the page -->
-    <link rel="stylesheet" href="../static/css/style1.css"> <!-- Link to external stylesheet -->
-    <base href="http://127.0.0.1:5222/"> <!-- Base URL for relative links -->
+    <link rel="stylesheet" href="../static/css_new/main.css"> <!-- Link to external stylesheet -->
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Great+Vibes&family=Pacifico&family=Parisienne&family=Lobster&display=swap" rel="stylesheet">
+
     <script src="../static/js/theme-toggle.js" defer></script>
 </head>
 <body>
+    <h1>Empower HerBlossom</h1>
+<div class="marquee-container">
+    <div class="marquee-content">
+        ❥&nbsp;&nbsp;&nbsp;QUEENs&nbsp;NEVER&nbsp;CRY&nbsp;&nbsp;&nbsp;❥&nbsp;&nbsp;&nbsp;
+        QUEENs&nbsp;NEVER&nbsp;CRY&nbsp;&nbsp;&nbsp;❥&nbsp;&nbsp;&nbsp;
+        QUEENs&nbsp;NEVER&nbsp;CRY&nbsp;&nbsp;&nbsp;❥&nbsp;&nbsp;&nbsp;
+        QUEENs&nbsp;NEVER&nbsp;CRY&nbsp;&nbsp;&nbsp;❥&nbsp;&nbsp;&nbsp;
+        QUEENs&nbsp;NEVER&nbsp;CRY&nbsp;&nbsp;&nbsp;❥&nbsp;&nbsp;&nbsp;
+        QUEENs&nbsp;NEVER&nbsp;CRY&nbsp;&nbsp;&nbsp;❥&nbsp;&nbsp;&nbsp;
+        QUEENs&nbsp;NEVER&nbsp;CRY&nbsp;&nbsp;&nbsp;❥
+    </div>
+</div>
     <div class="container">
         <!-- Button to return to the homepage -->
         <button class="return-button" onclick="location.href='../'">Return</button>
@@ -16,15 +29,14 @@
         <!-- Sign-in form -->
         <form>
             <!-- Logo Image -->
-            <img src="../static/photo/logo.png" alt="Logo" style="display: block; margin: 0 auto 10px;width: 250px; height: auto;">
-
+            <!--<img src="../static/photo/logo.png" alt="Logo" style="display: block; margin: 0 auto 10px;width: 250px; height: auto;">
+-->
             <!-- Identification Dropdown -->
             <label for="identification">Identification:</label>
             <select id="identification" name="identification">
                 <option value="">Select an option</option> <!-- Default placeholder option -->
-                <option value="Student">Student</option>
-                <option value="Staff">Staff</option>
-                <option value="Administrator">Administrator</option>
+                <option value="A">A</option>
+                <option value="B">B</option>
             </select>
 
             <!-- Name input field -->
