--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
    <link rel="stylesheet" href="../static/css_new/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Great+Vibes&family=Pacifico&family=Parisienne&family=Lobster&display=swap" rel="stylesheet">
-   <title>Title</title>
+    <link rel="icon" href="../static/favicon.png" type="image/png">
+    <title>Title</title>
 </head>
 <body>
     <h1>Empower HerBlossom</h1>
