--- a/code/templates/profile.html
+++ b/code/templates/profile.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" href="../static/favicon.png" type="image/png">
 </head>
 <body>
 
