--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -6,7 +6,7 @@
     <title>Sign In Form</title> <!-- Title of the page -->
     <link rel="stylesheet" href="../static/css_new/main.css"> <!-- Link to external stylesheet -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Great+Vibes&family=Pacifico&family=Parisienne&family=Lobster&display=swap" rel="stylesheet">
-
+    <link rel="icon" href="../static/favicon.png" type="image/png">
     <script src="../static/js/theme-toggle.js" defer></script>
 </head>
 <body>
