--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Great+Vibes&family=Pacifico&family=Parisienne&family=Lobster&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="../static/css_new/main.css"> <!-- Link to additional custom CSS -->
+<!-- PNG Favicon -->
+    <link rel="icon" href="../static/favicon.png" type="image/png">
     <script src="../static/js/theme-toggle.js" defer></script>
 </head>
 <body>
