Update icon Rename the old template files

--- a/code/templates/main.html
+++ b/code/templates/main.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Main</title>
     <link rel="icon" href="../static/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../static/css_new/main.css"> <!-- Link to additional custom CSS -->
 </head>
 <body>
 
