--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In Form</title> <!-- Title of the page -->
-    <link rel="stylesheet" href="../static/css_new/main.css"> <!-- Link to external stylesheet -->
+    <link rel="stylesheet" href="../static/css_new/signin.css"> <!-- Link to external stylesheet -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Great+Vibes&family=Pacifico&family=Parisienne&family=Lobster&display=swap" rel="stylesheet">
     <link rel="icon" href="../static/favicon.png" type="image/png">
     <script src="../static/js/theme-toggle.js" defer></script>
