--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -69,7 +69,7 @@
             <div class="button-group">
                 <button type="submit" onclick="validateForm()">Sign in</button> <!-- Sign-in button -->
                 <button type="button" class="ban-button" onclick="clearForm()">Clear</button> <!-- Clear button -->
-                <button type="button" class="ban-button" onclick="visitMainPage()">Visit Main Page as Guest</button> <!-- Guest button -->
+                <button type="button" class="guest-button" onclick="visitMainPage()">Visit as Guest</button> <!-- Guest button -->
             </div>
 
         </form>
