--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -26,7 +26,7 @@
                     <h4><span>KbDoc</span></h4>
                 </div>
             </div>
-            <h2 class="head">Did You Know?</h2>
+            <h2 class="head">QUEENs NEVER CRY</h2>
             <p></p>
         </div>
     </div>
@@ -35,15 +35,12 @@
             <div class="row ml-0 mr-0">
                 <div class="sign_left signin_left">
                     <h2>We are design changers do what matters.</h2>
-                    <img class="position-absolute top" src="../static/img/signup/top_ornamate.png" alt="top">
-                    <img class="position-absolute bottom" src="../static/img/signup/bottom_ornamate.png" alt="bottom">
-                    <img class="position-absolute middle" src="../static/img/signup/door.png" alt="bottom">
                     <div class="round"></div>
                 </div>
                 <div class="sign_right signup_right">
                     <div class="sign_inner signup_inner">
                         <div class="text-center">
-                            <h3>Sign in to KbDoc platform</h3>
+                            <h3>Empower HerBlossom</h3>
                             <p>Don’t have an account yet? <a href="signup.html">Sign up here</a></p>
                             <a href="#" class="btn-google"><img src="../static/img/signup/gmail.png" alt=""><span class="btn-text">Sign in with Gmail</span></a>
                         </div>
@@ -65,6 +62,9 @@
 
                             <div class="col-lg-12 text-center">
                                 <button type="submit" class="btn action_btn thm_btn">Sign in</button>
+                                <button type="button" class="btn action_btn ban-button" onclick="clearForm()">Clear</button> <!-- Clear button -->
+                                <button type="button" class="btn action_btn visit-button" onclick="visitMainPage()">Visit Main Page as Guest</button> <!-- Guest button -->
+
                             </div>
                         </form>
                     </div>
