change Title css

--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -40,10 +40,9 @@
                 <div class="sign_right signup_right">
                     <div class="sign_inner signup_inner">
                         <div class="text-center">
-                            <h3>Empower HerBlossom</h3>
+                            <h3> HerBlossom</h3>
                             <p>Don’t have an account yet? <a href="signup.html">Sign up here</a></p>
-                            <a href="#" class="btn-google"><img src="../static/img/signup/gmail.png" alt=""><span class="btn-text">Sign in with Gmail</span></a>
-                        </div>
+                            </div>
                         <div class="divider">
                             <span class="or-text">or</span>
                         </div>
