--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -62,7 +62,7 @@
                             <div class="col-lg-12 text-center">
                                 <button type="submit" class="btn action_btn thm_btn">Sign in</button>
                                 <button type="button" class="btn action_btn ban-button" onclick="clearForm()">Clear</button> <!-- Clear button -->
-                                <button type="button" class="btn action_btn visit-button" onclick="visitMainPage()">Visit Main Page as Guest</button> <!-- Guest button -->
+                                <button type="button" class="btn action_btn visit-button" onclick="visitMainPage()">Visit as Guest</button> <!-- Guest button -->
 
                             </div>
                         </form>
