Signin and Register page jump

--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -253,7 +253,7 @@
                         <ul class="dropdown-menu">
                             <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                             <li class="nav-item"><a href="signin.html" class="nav-link">Sign In</a></li>
-                            <li class="nav-item"><a href="signup.html" class="nav-link">Sign Up</a></li>
+                            <li class="nav-item"><a href="register.html" class="nav-link">Sign Up</a></li>
                             <li class="nav-item"><a href="typography.html" class="nav-link">Typography</a></li>
                             <li class="nav-item"><a href="error.html" class="nav-link">404 Error</a></li>
                         </ul>
