--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -44,7 +44,7 @@
                     <div class="sign_inner signup_inner">
                         <div class="text-center">
                             <h3>Create your KbDoc Account</h3>
-                            <p>Already have an account? <a href="signin.html">Sign in</a></p>
+                            <p>Already have an account? <a href="/signin">Sign in</a></p>
                             <a href="#" class="btn-google"><img src="../static/img/signup/gmail.png" alt=""><span class="btn-text">Sign up with Google</span></a>
                         </div>
                         <div class="divider">
