--- a/code/templates/index-helpdesk.html
+++ b/code/templates/index-helpdesk.html
@@ -250,7 +250,7 @@
                             <ul class="dropdown-menu">
                                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                                 <li class="nav-item"><a href="signin.html" class="nav-link">Sign In</a></li>
-                                <li class="nav-item"><a href="signup.html" class="nav-link">Sign Up</a></li>
+                                <li class="nav-item"><a href="register.html" class="nav-link">Sign Up</a></li>
                                 <li class="nav-item"><a href="typography.html" class="nav-link">Typography</a></li>
                                 <li class="nav-item"><a href="error.html" class="nav-link">404 Error</a></li>
                             </ul>
@@ -323,7 +323,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <a class="nav_btn icon-btn round-btn" href="signup.html"><i class="icon_headphones"></i>Free Trail</a>
+                    <a class="nav_btn icon-btn round-btn" href="register.html"><i class="icon_headphones"></i>Free Trail</a>
                 </div>
             </div>
         </nav>
