--- a/code/templates/layout-leftsidebar.html
+++ b/code/templates/layout-leftsidebar.html
@@ -233,7 +233,7 @@
                                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                                 <li class="nav-item"><a href="forums.html" class="nav-link">Forum</a></li>
                                 <li class="nav-item"><a href="signin.html" class="nav-link">Sign In</a></li>
-                                <li class="nav-item"><a href="signup.html" class="nav-link">Sign Up</a></li>
+                                <li class="nav-item"><a href="register.html" class="nav-link">Sign Up</a></li>
                                 <li class="nav-item"><a href="typography.html" class="nav-link">Typography</a></li>
                                 <li class="nav-item"><a href="error.html" class="nav-link">404 Error</a></li>
                             </ul>
@@ -406,7 +406,7 @@
                                 <li class="nav-item"><a href="Onepage.html" class="nav-link">Onepage</a></li>
                                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                                 <li class="nav-item"><a href="signin.html" class="nav-link">Sign In</a></li>
-                                <li class="nav-item"><a href="signup.html" class="nav-link">Sign Up</a></li>
+                                <li class="nav-item"><a href="register.html" class="nav-link">Sign Up</a></li>
                                 <li class="nav-item"><a href="typography.html" class="nav-link">Typography</a></li>
                                 <li class="nav-item"><a href="error.html" class="nav-link">404 Error</a></li>
                             </ul>
