--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -14,6 +14,15 @@
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
     <title>KbDoc</title>
+    <style>
+    .sign_right {
+        background-image: url("../static/images/background5.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+    }
+</style>
+
 </head>
 
 <body data-scroll-animation="true">
@@ -40,9 +49,11 @@
                 <div class="sign_right signup_right">
                     <div class="sign_inner signup_inner">
                         <div class="text-center">
+
                             <h3> HerBlossom</h3>
                             <p>Don’t have an account yet? <a href="signup.html">Sign up here</a></p>
                             </div>
+
                         <div class="divider">
                             <span class="or-text">or</span>
                         </div>
