--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -45,7 +45,13 @@
                 <div class="sign_left signin_left">
                     <h2>We are design changers do what matters.</h2>
                     <div class="round"></div>
+                    <div class="avatar-name">
+                    <img class="avatar-img" src="../static/images/Boran.jpg" alt="Boran">
+                    <span class="name">Boran Duan</span>
+            </div>
+
                 </div>
+
                 <div class="sign_right signup_right">
                     <div class="sign_inner signup_inner">
                         <div class="text-center">
@@ -62,11 +68,11 @@
                         </div>
                         <form action="#" class="row login_form">
                             <div class="col-lg-12 form-group">
-                                <div class="small_text">Your email</div>
+                                <div class="small_text">❥ Your email </div>
                                 <input type="email" class="form-control" id="email" placeholder="info@KbDoc.com">
                             </div>
                             <div class="col-lg-12 form-group">
-                                <div class="small_text">Confirm password</div>
+                                <div class="small_text">❥ Confirm password </div>
                                 <div class="confirm_password">
                                     <input id="password" name="password" type="password" class="form-control" placeholder="5+ characters required" autocomplete="off">
                                     <a href="#" class="forget_btn">Forgotten password?</a>
