--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -176,5 +176,11 @@
 
 </script>
 </body>
+<script>
+    // Function to visit the main page as a guest
+    function visitMainPage() {
+        window.location.href = "/index";
+    }
+</script>
 
 </html>
