--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -46,9 +46,26 @@
                     <h2>We are design changers do what matters.</h2>
                     <div class="round"></div>
                     <div class="avatar-name">
-                    <img class="avatar-img" src="../static/images/Boran.jpg" alt="Boran">
-                    <span class="name">Boran Duan</span>
-            </div>
+                        <img class="avatar-img" src="../static/images/Boran.jpg" alt="Boran">
+                        <span class="name">Boran Duan</span>
+                    </div>
+                    <div class="avatar-name-wenyi">
+                    <span class="name">Qiyue Zhu</span>
+                    <img class="avatar-img" src="../static/images/Qiyue.jpg" alt="Qiyue">
+                    </div>
+                    <div class="avatar-name-yani">
+                        <img class="avatar-img" src="../static/images/Wenyi.jpg" alt="Wenyi">
+                        <span class="name">Wenyi Liang</span>
+                    </div>
+                    <div class="avatar-name-wenyi">
+                    <span class="name">Yani Yang</span>
+                    <img class="avatar-img" src="../static/images/Yani.jpg" alt="Yani">
+                    </div>
+                    <div class="avatar-name-yani">
+                        <img class="avatar-img" src="../static/images/Zihan.jpg" alt="Zihan">
+                        <span class="name">Zihan Miao</span>
+                    </div>
+
 
                 </div>
 
