--- a/code/static/css_test/style.css
+++ b/code/static/css_test/style.css
@@ -3551,6 +3551,42 @@ ul.list-style li:last-child {
     margin-right: 10px;
 }
 
+/* 头像从左到右渐变显示 */
+@keyframes fadeInLeft {
+    from {
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+/* 头像从右到左渐变显示 */
+@keyframes fadeInRight {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+/* Boran 和 Yani 从左到右出现 */
+.avatar-name,
+.avatar-name-yani {
+    animation: fadeInLeft 1.0s ease-in-out forwards;
+}
+
+/* Wenyi 从右到左出现 */
+.avatar-name-wenyi {
+    animation: fadeInRight 1.0s ease-in-out forwards;
+}
+
+
 
 #preloader p {
   color: #6b707f;
