--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -74,14 +74,11 @@
                         <div class="text-center">
 
                             <h3> HerBlossom</h3>
-                            <div class="text">
-                                If you do not have an account, please <a href="/register"
-                                                                         class="link-primary">register</a>
-                            </div>
+
                         </div>
 
                         <div class="divider">
-                            <span class="or-text">or</span>
+                            <span class="or-text"></span>
                         </div>
                         <form action="#" class="row login_form">
                             <div class="col-lg-12 form-group">
@@ -97,6 +94,12 @@
                                     or you can choose <a href="/index">just view</a>
 
                             </div>
+
+                            <div class="text">
+                                If you do not have an account, please <a href="/register"
+                                                                         class="link-primary">register</a>
+                            </div>
+
 
                             <div class="col-lg-12 text-center">
                                 <button type="button" class="btn action_btn ban-button" onclick="clearForm()">Clear</button> <!-- Clear button -->
