--- a/code/static/css_test/style.css
+++ b/code/static/css_test/style.css
@@ -8934,21 +8934,26 @@ blockquote .author {
 
 .sign_inner h3 {
     font-family: 'Dancing Script', cursive; /* 手写风格字体 */
-    font-size: 80px; /* 字体加大 */
+    font-size: 135px; /* 字体加大 */
     font-weight: 700; /* 加粗 */
     line-height: 44px; /* 适配更大的字体 */
-    color: #FF6699; /* 桃粉色 */
+    color: #FF887A; /* 桃粉色 */
+
     text-align: center; /* 居中对齐 */
     position: absolute;
     top: calc(15% + 5px);  /* 原位置向下移动 50px */
     left: calc(50% + 200px);  /* 原位置向右移动 100px */
     transform: translateX(-50%);  /* 依然保持水平居中 */
+    font-weight: 600;
     text-shadow:
-        2px 2px 4px rgba(255, 105, 180, 0.5),  /* 粉色阴影 */
-        4px 4px 6px rgba(255, 20, 147, 0.3);  /* 深粉色阴影 */
+    4px 4px 6px rgba(255, 20, 147, 0.3),  /* 深粉色阴影 */
+    6px 6px 8px rgba(255, 255, 255, 0.5);
+
+
 
     opacity: 0;  /* 初始不可见 */
     animation: fadeIn 1.5s ease-in-out 0s forwards;  /* 渐入动画 */
+
 }
 
 /* 复用 fadeIn 动画 */
