--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -73,8 +73,8 @@
                     <div class="sign_inner signup_inner">
                         <div class="text-center">
 
-                            <h3> HerBlossom</h3>
-
+                            <h3> &nbsp;&nbsp;&nbsp;HerBlossom</h3>
+                            <br>
                         </div>
 
                         <div class="divider">
@@ -91,14 +91,19 @@
                                     <input id="password" name="password" type="password" class="form-control" placeholder="5+ characters required" autocomplete="off">
                                     <a href="#" class="forget_btn">Forgotten password?</a>
                                 </div>
+                                <br>
                                     or you can choose <a href="/index">just view</a>
 
                             </div>
+                            <br>
 
                             <div class="text">
-                                If you do not have an account, please <a href="/register"
-                                                                         class="link-primary">register</a>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If you do not have an account, please <a href="/register"
+                                                                         class="link-primary">register</a> at here！
                             </div>
+                            <div class="divider">
+                            <span class="or-text"></span>
+                        </div>
 
 
                             <div class="col-lg-12 text-center">
